--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,9 @@ dist.jar=${dist.dir}/B_rse.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.14.jar=G:\\controlsfx-8.40.14.jar
+file.reference.fontawesomefx-8.9.jar=G:\\fontawesomefx-8.9.jar
+file.reference.jfoenix-8.0.7.jar=G:\\jfoenix-8.0.7.jar
 file.reference.mysql-connector-java-5.1.5-bin.jar=jars/mysql-connector-java-5.1.5-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -38,7 +41,10 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.5-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.5-bin.jar}:\
+    ${file.reference.controlsfx-8.40.14.jar}:\
+    ${file.reference.fontawesomefx-8.9.jar}:\
+    ${file.reference.jfoenix-8.0.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
